Fixed UI in login page
- Fixed cropping of the login form container on small to medium devices.
- Fixed misalignment of Login button and "new user ? signup" text.

--- a/client/src/components/css/Login.css
+++ b/client/src/components/css/Login.css
@@ -1,10 +1,3 @@
-.outer-login-div {
-    height: auto;
-    display: flex;
-    align-items: center;
-    margin-top: 5%;
-}
-
 .login-container {
     display: flex;
     flex-direction: column;
